--- a/index.html
+++ b/index.html
@@ -125,18 +125,20 @@
 
         <ul class="nav-list">
           <li class="mail_link">
-            <svg width="16" height="12">
-              <use href="./images/sprite.svg#icon-envelope-hover"> </use>
-            </svg>
-            <a class="link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+                        <a class="link" href="mailto:info@devstudio.com"
+              >
+              <svg class="header-svg" width="16" height="12">
+                <use href="./images/sprite.svg#icon-envelope-hover"> </use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="mail_link">
-            <svg width="16" height="12">
+            <a class="link" href="tell:+380961111111">  
+              <svg class="header-svg" width="16" height="12">
               <use href="./images/sprite.svg#icon-telepfone-hover"> </use>
-            </svg>
-            <a class="link" href="tell:+380961111111">+38 096 111 11 11</a>
+              </svg>
+              +38 096 111 11 11</a>
           </li>
         </ul>
         </div>
@@ -244,12 +246,13 @@
         </section>
     
 
-      <!-- Наші особливості -->
+      <!-- Нашa command -->
       
         <section class="our_section">
           <div class="container">
           <h2 class="command">Наша команда</h2>
           <ul class="command_title">
+            <!-- igor -->
             <li class="command-fon">
               <img src="./images/1.jpg" alt="" width="270px" height="260px" />
               <div class="transcript">
@@ -257,56 +260,73 @@
               <p class="paragraf" lang="en">Product Designer</p>
               <ul class="social-icon">
                 <li class="ellips">
-                  <svg class="link-icon" width="22" height="22">
-                    <use class="fon" href="./images/sprite.svg#icon-instagram-1"> </use>
-                  </svg>
+                  <a class="ellips-link" href="">
+                    <svg class="link-icon" width="22" height="22">
+                      <use class="fon-blu" href="./images/sprite.svg#icon-instagram-1"> </use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="ellips">
-                  <svg class="link-icon" width="22" height="22">
-                    <use class="fon" href="./images/sprite.svg#icon-twitter-1"> </use>
-                  </svg>
+                  <a class="ellips-link" href="">
+                    <svg class="link-icon" width="22" height="22">
+                      <use class="fon-blu" href="./images/sprite.svg#icon-twitter-1"> </use>
+                    </svg>
+                 </a>
                 </li>
                 <li class="ellips">
-                  <svg class="link-icon" width="22" height="22">
-                    <use class="fon" href="./images/sprite.svg#icon-facebook-1"> </use>
-                  </svg>
+                  <a class="ellips-link" href="">
+                    <svg class="link-icon" width="22" height="22">
+                      <use class="fon-blu" href="./images/sprite.svg#icon-facebook-1"> </use>
+                    </svg>
+                 </a>
 
                 </li>
                 <li class="ellips">
-                  <svg class="link-icon" width="22" height="22">
-                    <use class="fon" href="./images/sprite.svg#icon-linkedin-1"> </use>
-                  </svg>
+                  <a class="ellips-link" href="">
+                    <svg class="link-icon" width="22" height="22">
+                      <use class="fon-blu" href="./images/sprite.svg#icon-linkedin-1"> </use>
+                    </svg>
+                  </a>
 
                 </li>
               </ul>
               </div>
             </li>
             <li class="command-fon">
+              <!-- olga -->
               <img src="./images/2.jpg" alt="" width="270px" height="260px" />
               <div class="transcript">
               <h3 class="name">Ольга Рєпіна</h3>
               <p class="paragraf" lang="en">Frontend Developer</p>
               <ul class="social-icon">
                 <li class="ellips">
-                  <svg class="link-icon" width="22" height="22">
-                    <use class="fon" href="./images/sprite.svg#icon-instagram-1"> </use>
-                  </svg>
+                  <a class="ellips-link" href="">
+                    <svg class="link-icon" width="22" height="22">
+                      <use class="fon-blu" href="./images/sprite.svg#icon-instagram-1"> </use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="ellips">
-                  <svg class="link-icon" width="22" height="22">
-                    <use class="fon" href="./images/sprite.svg#icon-twitter-1"> </use>
-                  </svg>
+                  <a class="ellips-link" href="">
+                    <svg class="link-icon" width="22" height="22">
+                      <use class="fon-blu" href="./images/sprite.svg#icon-twitter-1"> </use>
+                    </svg>
+                 </a>
                 </li>
                 <li class="ellips">
-                  <svg class="link-icon" width="22" height="22">
-                    <use class="fon" href="./images/sprite.svg#icon-facebook-1"> </use>
-                  </svg>
+                  <a class="ellips-link" href="">
+                    <svg class="link-icon" width="22" height="22">
+                      <use class="fon-blu" href="./images/sprite.svg#icon-facebook-1"> </use>
+                    </svg>
+                 </a>
 
                 </li>
                 <li class="ellips">
-                  <svg class="link-icon" width="22" height="22">
-                    <use class="fon" href="./images/sprite.svg#icon-linkedin-1"> </use>
-                  </svg>
+                  <a class="ellips-link" href="">
+                    <svg class="link-icon" width="22" height="22">
+                      <use class="fon-blu" href="./images/sprite.svg#icon-linkedin-1"> </use>
+                    </svg>
+                  </a>
 
                 </li>
               </ul>
@@ -319,25 +339,33 @@
               <p class="paragraf" lang="en">Marketing</p>
               <ul class="social-icon">
                 <li class="ellips">
-                  <svg class="link-icon" width="22" height="22">
-                    <use class="fon" href="./images/sprite.svg#icon-instagram-1"> </use>
-                  </svg>
+                  <a class="ellips-link" href="">
+                    <svg class="link-icon" width="22" height="22">
+                      <use class="fon-blu" href="./images/sprite.svg#icon-instagram-1"> </use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="ellips">
-                  <svg class="link-icon" width="22" height="22">
-                    <use class="fon" href="./images/sprite.svg#icon-twitter-1"> </use>
-                  </svg>
+                  <a class="ellips-link" href="">
+                    <svg class="link-icon" width="22" height="22">
+                      <use class="fon-blu" href="./images/sprite.svg#icon-twitter-1"> </use>
+                    </svg>
+                 </a>
                 </li>
                 <li class="ellips">
-                  <svg class="link-icon" width="22" height="22">
-                    <use class="fon" href="./images/sprite.svg#icon-facebook-1"> </use>
-                  </svg>
+                  <a class="ellips-link" href="">
+                    <svg class="link-icon" width="22" height="22">
+                      <use class="fon-blu" href="./images/sprite.svg#icon-facebook-1"> </use>
+                    </svg>
+                 </a>
 
                 </li>
                 <li class="ellips">
-                  <svg class="link-icon" width="22" height="22">
-                    <use class="fon" href="./images/sprite.svg#icon-linkedin-1"> </use>
-                  </svg>
+                  <a class="ellips-link" href="">
+                    <svg class="link-icon" width="22" height="22">
+                      <use class="fon-blu" href="./images/sprite.svg#icon-linkedin-1"> </use>
+                    </svg>
+                  </a>
 
                 </li>
               </ul>
@@ -350,25 +378,33 @@
               <p class="paragraf" lang="en">UI Designer</p>
               <ul class="social-icon">
                 <li class="ellips">
-                  <svg class="link-icon" width="22" height="22">
-                    <use class="fon" href="./images/sprite.svg#icon-instagram-1"> </use>
-                  </svg>
+                  <a class="ellips-link" href="">
+                    <svg class="link-icon" width="22" height="22">
+                      <use class="fon-blu" href="./images/sprite.svg#icon-instagram-1"> </use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="ellips">
-                  <svg class="link-icon" width="22" height="22">
-                    <use class="fon" href="./images/sprite.svg#icon-twitter-1"> </use>
-                  </svg>
+                  <a class="ellips-link" href="">
+                    <svg class="link-icon" width="22" height="22">
+                      <use class="fon-blu" href="./images/sprite.svg#icon-twitter-1"> </use>
+                    </svg>
+                 </a>
                 </li>
                 <li class="ellips">
-                  <svg class="link-icon" width="22" height="22">
-                    <use class="fon" href="./images/sprite.svg#icon-facebook-1"> </use>
-                  </svg>
+                  <a class="ellips-link" href="">
+                    <svg class="link-icon" width="22" height="22">
+                      <use class="fon-blu" href="./images/sprite.svg#icon-facebook-1"> </use>
+                    </svg>
+                 </a>
 
                 </li>
                 <li class="ellips">
-                  <svg class="link-icon" width="22" height="22">
-                    <use class="fon" href="./images/sprite.svg#icon-linkedin-1"> </use>
-                  </svg>
+                  <a class="ellips-link" href="">
+                    <svg class="link-icon" width="22" height="22">
+                      <use class="fon-blu" href="./images/sprite.svg#icon-linkedin-1"> </use>
+                    </svg>
+                  </a>
 
                 </li>
               </ul>
@@ -380,39 +416,51 @@
 
 
               <!-- Постійні клієнти -->
-              <section class="my_section">
+              <section class="const_section">
                 <div class="container">
                <h2 class="work-specific">Постійні клієнти</h2>
               <ul class="klients">
                 <li class="icon-items">
-                  <svg class="klient-icon" width="170" height="92">
-                    <use href="./images/sprite.svg#icon-Client-1"> </use>
-                  </svg>
+                  <a class="klients-link" href="">
+                    <svg class="klient-icon" width="170" height="92">
+                      <use class="klient-logo" href="./images/sprite.svg#icon-Client-1"> </use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="icon-items">
-                  <svg class="klient-icon" width="170" height="92">
-                    <use href="./images/sprite.svg#icon-Client-2"> </use>
+                   <a class="klients-link" href="">
+                    <svg class="klient-icon" width="170" height="92">
+                    <use class="klient-logo" href="./images/sprite.svg#icon-Client-2"> </use>
                   </svg>
+                  </a>
                 </li>
                 <li class="icon-items">
-                  <svg class="klient-icon" width="170" height="92">
-                    <use href="./images/sprite.svg#icon-Client-3"> </use>
+                   <a class="klients-link" href="">
+                    <svg class="klient-icon" width="170" height="92">
+                    <use class="klient-logo" href="./images/sprite.svg#icon-Client-3"> </use>
                   </svg>
+                  </a>
                 </li>
                 <li class="icon-items">
-                  <svg class="klient-icon" width="170" height="92">
-                    <use href="./images/sprite.svg#icon-Client-4"> </use>
+                   <a class="klients-link" href="">
+                    <svg class="klient-icon" width="170" height="92">
+                    <use class="klient-logo" href="./images/sprite.svg#icon-Client-4"> </use>
                   </svg>
+                  </a>
                 </li>
                 <li class="icon-items">
-                  <svg class="klient-icon" width="170" height="92">
-                    <use href="./images/sprite.svg#icon-Client-5"> </use>
+                   <a class="klients-link" href="">
+                    <svg class="klient-icon" width="170" height="92">
+                    <use class="klient-logo" href="./images/sprite.svg#icon-Client-5"> </use>
                   </svg>
+                  </a>
                 </li>
                 <li class="icon-items">
-                  <svg class="klient-icon" width="170" height="92">
-                    <use href="./images/sprite.svg#icon-Client-6"> </use>
+                   <a class="klients-link" href="">
+                    <svg class="klient-icon" width="170" height="92">
+                    <use class="klient-logo" href="./images/sprite.svg#icon-Client-6"> </use>
                   </svg>
+                  </a>
                 </li>
               </ul>
                </div>
@@ -449,26 +497,34 @@
         <div class="wellkom">
           <h2 class="wellkoms">Приєднуйтесь</h2>
           <ul class="foot-icon">
-            <li class="ellips">
-              <svg class="link-icon" width="44" height="44">
-                <use class="fon-fut"  href="./images/sprite.svg#icon-instagram"> </use>
+            <li class="foot-links">
+              <a class="foot-lin" href="">
+              <svg class="link-icon" width="20" height="20">
+                <use class="fon-fut"  href="./images/sprite.svg#icon-instagram-1"> </use>
               </svg>
+              </a>
             </li>
-            <li class="ellips">
-              <svg class="link-icon" width="44" height="44">
-                <use class="fon-fut"  href="./images/sprite.svg#icon-twitter"> </use>
+            <li class="foot-links">
+              <a class="foot-lin" href="">
+              <svg class="link-icon" width="20" height="20">
+                <use class="fon-fut"  href="./images/sprite.svg#icon-twitter-1"> </use>
               </svg>
+              </a>
             </li>
-            <li class="ellips">
-              <svg class="link-icon" width="44" height="44">
-                <use class="fon-fut"  href="./images/sprite.svg#icon-facebook"> </use>
+            <li class="foot-links">
+              <a class="foot-lin" href="">
+              <svg class="link-icon" width="20" height="20">
+                <use class="fon-fut"  href="./images/sprite.svg#icon-facebook-1"> </use>
               </svg>
+              </a>
 
             </li>
-            <li class="ellips">
-              <svg class="link-icon" width="44" height="44">
-                <use class="fon-fut"  href="./images/sprite.svg#icon-linkedin"> </use>
+            <li class="foot-links">
+              <a class="foot-lin" href="">
+              <svg class="link-icon" width="20" height="20">
+                <use class="fon-fut"  href="./images/sprite.svg#icon-linkedin-1"> </use>
               </svg>
+              </a>
 
             </li>
           </ul>
