--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
 
      <!-- top топ -->
 
-     <header class="header">
+<header class="header">
       <div class="header-container">
         <nav class="nav">
           <a class="header_web" href="./index.html"
@@ -67,18 +67,20 @@
 
         <ul class="nav-list">
           <li class="mail_link">
-            <svg width="16" height="12">
-              <use href="./images/sprite.svg#icon-envelope-hover"> </use>
-            </svg>
-            <a class="link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+                        <a class="link" href="mailto:info@devstudio.com"
+              >
+              <svg class="header-svg" width="16" height="12">
+                <use href="./images/sprite.svg#icon-envelope-hover"> </use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="mail_link">
-            <svg width="16" height="12">
+            <a class="link" href="tell:+380961111111">  
+              <svg class="header-svg" width="16" height="12">
               <use href="./images/sprite.svg#icon-telepfone-hover"> </use>
-            </svg>
-            <a class="link" href="tell:+380961111111">+38 096 111 11 11</a>
+              </svg>
+              +38 096 111 11 11</a>
           </li>
         </ul>
         </div>
@@ -188,56 +190,64 @@
     </main>
    <!-- basement -->
    <footer class="footer">
-    <div class="footer-container">
-        <div>
-          <a class="footer_web" href="./index.html"
-          >Web <span class="Studio_color">Studio</span></a
-        >
-        <address class="fut-adress">
-          <p class="paragraf-fut">м. Київ, пр-т Лесі Українки, 26</p>
-          <ul class="footer_contacts">
-            <li class="footer-li">
-              <a class="foot_link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+        <div class="footer-container">
+            <div>
+              <a class="footer_web" href="./index.html"
+              >Web <span class="Studio_color">Studio</span></a
+            >
+            <address class="fut-adress">
+              <p class="paragraf-fut">м. Київ, пр-т Лесі Українки, 26</p>
+              <ul class="footer_contacts">
+                <li class="footer-li">
+                  <a class="foot_link" href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li class="footer-li">
+                  <a class="foot_link" href="tell:+380961111111"
+                    >+38 096 11 11 111</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </div>
+        <div class="wellkom">
+          <h2 class="wellkoms">Приєднуйтесь</h2>
+          <ul class="foot-icon">
+            <li class="foot-links">
+              <a class="foot-lin" href="">
+              <svg class="link-icon" width="20" height="20">
+                <use class="fon-fut"  href="./images/sprite.svg#icon-instagram-1"> </use>
+              </svg>
+              </a>
             </li>
-            <li class="footer-li">
-              <a class="foot_link" href="tell:+380961111111"
-                >+38 096 11 11 111</a
-              >
+            <li class="foot-links">
+              <a class="foot-lin" href="">
+              <svg class="link-icon" width="20" height="20">
+                <use class="fon-fut"  href="./images/sprite.svg#icon-twitter-1"> </use>
+              </svg>
+              </a>
+            </li>
+            <li class="foot-links">
+              <a class="foot-lin" href="">
+              <svg class="link-icon" width="20" height="20">
+                <use class="fon-fut"  href="./images/sprite.svg#icon-facebook-1"> </use>
+              </svg>
+              </a>
+
+            </li>
+            <li class="foot-links">
+              <a class="foot-lin" href="">
+              <svg class="link-icon" width="20" height="20">
+                <use class="fon-fut"  href="./images/sprite.svg#icon-linkedin-1"> </use>
+              </svg>
+              </a>
+
             </li>
           </ul>
-        </address>
-      </div>
-    <div class="wellkom">
-      <h2 class="wellkoms">Приєднуйтесь</h2>
-      <ul class="foot-icon">
-        <li class="ellips">
-          <svg class="link-icon" width="44" height="44">
-            <use class="fon-fut"  href="./images/sprite.svg#icon-instagram"> </use>
-          </svg>
-        </li>
-        <li class="ellips">
-          <svg class="link-icon" width="44" height="44">
-            <use class="fon-fut"  href="./images/sprite.svg#icon-twitter"> </use>
-          </svg>
-        </li>
-        <li class="ellips">
-          <svg class="link-icon" width="44" height="44">
-            <use class="fon-fut"  href="./images/sprite.svg#icon-facebook"> </use>
-          </svg>
-
-        </li>
-        <li class="ellips">
-          <svg class="link-icon" width="44" height="44">
-            <use class="fon-fut"  href="./images/sprite.svg#icon-linkedin"> </use>
-          </svg>
-
-        </li>
-      </ul>
-    </div>
-      </div>
-     
-  </footer>
+        </div>
+          </div>
+         
+      </footer>
 </body>
 </html>
