--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 
       <!-- Нашa command -->
       
-        <section class="our_section">
+        <section class="our_command">
           <div class="container">
           <h2 class="command">Наша команда</h2>
           <ul class="command_title">
@@ -495,7 +495,7 @@
             </address>
           </div>
         <div class="wellkom">
-          <h2 class="wellkoms">Приєднуйтесь</h2>
+          <h2 class="wellkoms">ПРИЄДНУЙТЕСЬ</h2>
           <ul class="foot-icon">
             <li class="foot-links">
               <a class="foot-lin" href="">
